# RGBD_LiDAR_airsim_controller

./: .gitignore  CMakeLists.txt  README.md  docker_run.sh
docker/: Dockerfile  docker_build.sh
include/RGBD_LiDAR_airsim_controller/: drone_flight.h  get_clipped_rgbd_image.h  get_lidar_rgbd_image.h  new_waypoint_flight.h  selection_drone_point.h  waypoint_flight.h
place_data/: random_place2.csv
place_data/RGBD_LiDAR_Attitude_Estimation/Building99/: random_place2022_02_07_2.csv
place_data/SII2022_Waypoint/AbandonedPark/: random_place.csv
place_data/SII2022_Waypoint/AirSimNH/: random_place.csv  random_place2.csv
place_data/SII2022_Waypoint/Building99/: random_place.csv
pysrc/: drone_rgbd_image.py
pyyaml/: drone_rgbd_image.yaml
setting_files/: cv_mode.json  drone_1cam_lidar16.json  drone_1cam_lidar32.json  drone_rgbd_lidar32.json  drone_rgbd_lidar32_2.json  new_waypoint_flight.json  ps4_flight.json  waypoint_flight.json
shell/: create_new_waypoint_flight_data_folder.sh  new_waypoint_AirSimNH.sh  ps4_AirSimNH.sh  run_AirSimNH.sh  run_Building99.sh  waypoint_AirSimNH.sh
src/: drone_flight.cpp  get_clipped_rgbd_image.cpp  get_lidar_rgbd_image.cpp  new_waypoint_flight.cpp  selection_drone_point.cpp  waypoint_flight.cpp
waypoint_data/: AirSimNH.csv  waypoint.csv
